chore: removed usage of Unsafe for good and replaced with VarHandle